SOUR-34-button fix style issues

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -3,20 +3,20 @@ $btn-hover: #5836cc;
 $btn-active: #462ca3;
 $btn-disabled: #edeff1;
 $btntxt-disabled: #9ea7b3;
-$text-def: #fff;
-$roboto-medium: 'Roboto', sans-serif;
-$font16: 16px;
+$size-16: 16px;
+
+@import '../../styles/base/typography';
+@import '../../styles/base/colors';
 
 .button {
     background-color: $btn-default;
     border: 0;
     border-radius: 65px;
-    color: $text-def;
+    color: $color-white;
     cursor: pointer;
     font-family: $roboto-medium;
-    font-size: $font16;
+    font-size: $size-16;
     height: 40px;
-    outline: none;
     padding: 8px 24px;
 
     &:hover,
