--- a/src/components/main-layout/layout-components/Header/ProfileWidget/ProfileWidget.scss
+++ b/src/components/main-layout/layout-components/Header/ProfileWidget/ProfileWidget.scss
@@ -1,6 +1,8 @@
-.profileWidget__placeholder {
-    background: #ff6e75;
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
+.profile-widget {
+    &__placeholder {
+        background: #ff6e75;
+        border-radius: 50%;
+        height: 40px;
+        width: 40px;
+    }
 }
