--- a/src/components/InputField/input-field.scss
+++ b/src/components/InputField/input-field.scss
@@ -23,7 +23,8 @@ label {
     font-family: $roboto-medium;
 }
 
-.input-wrap__field {
+.input-wrap__field,
+%input-field {
     border: 1px solid $lightgrey;
     border-radius: 5px;
     box-sizing: border-box;
@@ -31,8 +32,19 @@ label {
     margin-top: 8px;
     padding: 12px 16px;
     width: 100%;
+
+    &--error {
+        @extend %input-field;
+        border: 1px solid $validerror;
+    }
 }
 
 .input-wrap {
     margin: 20px;
+}
+
+svg {
+    left: 90%;
+    position: fixed;
+    transform: translateY(-280%);
 }
