--- a/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
+++ b/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
@@ -102,15 +102,16 @@ $transparent: transparent;
 .selected .navigation__item-background {
     fill: $color-light-white;
 }
+@media (hover: hover) and (pointer: fine) {
+    .navigation__item:hover .navigation__icon {
+        stroke: $color-light-white;
+    }
 
-.navigation__item:hover .navigation__icon {
-    stroke: $color-light-white;
-}
+    .navigation__item:hover .navigation__text {
+        color: $color-light-white;
+    }
 
-.navigation__item:hover .navigation__text {
-    color: $color-light-white;
-}
-
-.navigation__item:hover .navigation__item-background {
-    fill: $color-hover-purple;
+    .navigation__item:hover .navigation__item-background {
+        fill: $color-hover-purple;
+    }
 }
