--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,2 +1,12 @@
 $color-black: #000;
 $color-white: #fff;
+$color-blue-dark: #001836;
+$color-grey-7: #3e5067;
+$color-grey-6: #6a7889;
+$color-grey-5: #94a3ad;
+$color-grey-4: #cacfd5;
+$color-grey-3: #dcdfe3;
+$color-grey-2: #edeff1;
+$color-grey-1: #f6f7f8;
+$color-red: #ff6e75;
+$color-grey-label: #9ea7b3;
