--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,5 +1,5 @@
 $color-black: #000;
 $color-white: #fff;
-$color-hover-grey: #edeff1;
+$color-grey-2: #edeff1;
 $color-font-blue: #3e5067;
 $color-border: #cacfd5;
