--- a/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
+++ b/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
@@ -20,98 +20,98 @@ $transparent: transparent;
 
 .navigation {
     overflow: hidden;
-}
 
-.navigation ul {
-    list-style-type: none;
-    margin-top: 70px;
-    padding-inline-start: 20px;
-}
+    ul {
+        list-style-type: none;
+        margin-top: 70px;
+        padding-inline-start: 20px;
+    }
 
-.navigation__chevron {
-    left: 50%;
-    position: absolute;
-    stroke: $color-light-white;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 0.2s;
-
-    &--background {
-        background-color: $color-dark-grey;
-        border: 2px solid $color-light-white;
-        border-radius: 50%;
-        cursor: pointer;
-        height: 26px;
-        margin-top: 24px;
-        outline: none;
+    &__chevron {
+        left: 50%;
         position: absolute;
-        right: -12px;
-        width: 26px;
-    }
-
-    &--left {
-        transform: rotateY(-180deg) translate(50%, -50%);
-        transition: transform 0.2s;
-    }
-}
-
-.navigation__logo {
-    margin: 24px;
-}
-
-.navigation__item {
-    height: 70px;
-    padding-bottom: 5px;
-    position: relative;
-}
-
-.navigation__context {
-    padding-left: 16px;
-    position: absolute;
-    top: 60%;
-    transform: translateY(-50%);
-    white-space: nowrap;
-}
-
-.navigation__icon {
-    height: 24px;
-    stroke: $color-light-white;
-    vertical-align: middle;
-    width: 24px;
-}
-
-.selected .navigation__icon {
-    stroke: $color-dark-grey;
-}
-
-.navigation__text {
-    color: $color-light-white;
-    font-weight: 500;
-    padding-left: 20px;
-    vertical-align: middle;
-}
-
-.selected .navigation__text {
-    color: $color-dark-grey;
-}
-
-.navigation__item-background {
-    fill: $transparent;
-}
-
-.selected .navigation__item-background {
-    fill: $color-light-white;
-}
-@media (hover: hover) and (pointer: fine) {
-    .navigation__item:hover .navigation__icon {
         stroke: $color-light-white;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        transition: transform 0.2s;
+
+        &--background {
+            background-color: $color-dark-grey;
+            border: 2px solid $color-light-white;
+            border-radius: 50%;
+            cursor: pointer;
+            height: 26px;
+            margin-top: 24px;
+            outline: none;
+            position: absolute;
+            right: -12px;
+            width: 26px;
+        }
+
+        &--left {
+            transform: rotateY(-180deg) translate(50%, -50%);
+            transition: transform 0.2s;
+        }
     }
 
-    .navigation__item:hover .navigation__text {
+    &__logo {
+        margin: 24px;
+    }
+
+    &__item {
+        height: 70px;
+        padding-bottom: 5px;
+        position: relative;
+    }
+
+    &__context {
+        padding-left: 16px;
+        position: absolute;
+        top: 60%;
+        transform: translateY(-50%);
+        white-space: nowrap;
+    }
+
+    &__icon {
+        height: 24px;
+        stroke: $color-light-white;
+        vertical-align: middle;
+        width: 24px;
+    }
+
+    .selected &__icon {
+        stroke: $color-dark-grey;
+    }
+
+    &__text {
         color: $color-light-white;
+        font-weight: 500;
+        padding-left: 20px;
+        vertical-align: middle;
     }
 
-    .navigation__item:hover .navigation__item-background {
-        fill: $color-hover-purple;
+    .selected &__text {
+        color: $color-dark-grey;
+    }
+
+    &__item-background {
+        fill: $transparent;
+    }
+
+    .selected &__item-background {
+        fill: $color-light-white;
+    }
+    @media (hover: hover) and (pointer: fine) {
+        &__item:hover &__icon {
+            stroke: $color-light-white;
+        }
+
+        &__item:hover &__text {
+            color: $color-light-white;
+        }
+
+        &__item:hover &__item-background {
+            fill: $color-hover-purple;
+        }
     }
 }
