--- a/src/components/InputField/input-field.scss
+++ b/src/components/InputField/input-field.scss
@@ -4,11 +4,16 @@
     color: $color-red;
     font-family: $font-roboto;
     font-size: $size-10;
+    text-transform: uppercase;
 }
 
 ::placeholder {
     color: $color-grey-4;
     font-family: $font-roboto;
+}
+
+:invalid {
+    text-transform: uppercase;
 }
 
 .input-wrap__field {
@@ -27,11 +32,25 @@
 }
 
 .input-wrap {
-    margin: 20px;
+    margin-top: 33px;
 }
 
-svg {
-    left: 90%;
-    position: fixed;
-    transform: translateY(-280%);
+.input-passwords,
+.input-names {
+    column-gap: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.input-error-cross {
+    display: flex;
+    justify-content: space-between;
+
+    span {
+        margin-top: 8px;
+    }
+
+    svg {
+        transform: translate(-20px, -29px);
+    }
 }
