--- a/src/components/Form/FormWrapper/form-wrapper.scss
+++ b/src/components/Form/FormWrapper/form-wrapper.scss
@@ -3,7 +3,7 @@
 .form-wrapper {
     height: 100vh;
     width: 100vw;
-    background-color: $color-grey90;
+    background-color: $color-grey-form;
     display: flex;
     flex-direction: column;
     justify-content: center;
