--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -11,6 +11,7 @@ $color-grey-2: #edeff1;
 $color-grey-1: #f6f7f8;
 $color-red: #ff6e75;
 $color-grey-label: #9ea7b3;
+$color-grey-form: #e5e5e5;
 
 $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
