--- a/src/components/UserProfile/user-profile.scss
+++ b/src/components/UserProfile/user-profile.scss
@@ -8,7 +8,7 @@ body {
     line-height: 22px;
 }
 
-.container {
+.widget-container {
     align-items: center;
     display: flex;
     justify-content: center;
@@ -21,6 +21,7 @@ body {
     &__btn {
         border: 0;
         border-radius: 50%;
+        cursor: pointer;
         height: 40px;
         outline: 0;
         width: 40px;
