--- a/src/components/Form/FormWrapper/form-wrapper.scss
+++ b/src/components/Form/FormWrapper/form-wrapper.scss
@@ -4,12 +4,13 @@
     height: 100vh;
     width: 100vw;
     background-color: $color-grey-form;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &__field {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     &__logo {
