SOUR-6-Modify color names and remove font properties from .scss files

--- a/src/components/Form/FormWrapper/form-wrapper.scss
+++ b/src/components/Form/FormWrapper/form-wrapper.scss
@@ -3,7 +3,7 @@
 .form-wrapper {
     height: 100vh;
     width: 100vw;
-    background-color: $color-grey-form;
+    background-color: $color-grey-90;
     display: flex;
     justify-content: center;
     align-items: center;
