--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
 
 $main-font: 'Roboto', sans-serif;
+$size-60: 60px;
+$size-20: 20px;
 $size-16: 16px;
 $size-14: 14px;
+$size-12: 12px;
 $size-10: 10px;
