SOUR-40 Fix dropdopwn menu to expand to fit all content without breaking into other line

--- a/src/components/UserProfile/user-profile.scss
+++ b/src/components/UserProfile/user-profile.scss
@@ -36,10 +36,10 @@ body {
 
 .drop-menu {
     display: inline-block;
+    min-width: 200px;
     position: absolute;
     right: 0;
     top: 50px;
-    width: 200px;
 
     &__arrow-up {
         background-color: $color-white;
@@ -78,16 +78,10 @@ body {
         align-items: center;
         display: flex;
         margin: 15px;
-    }
-
-    svg {
-        flex-shrink: 0;
+        white-space: nowrap;
     }
 
     &__text {
-        margin-left: 8px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        margin: 0 0 0 8px;
     }
 }
