SOUR-43-Change color names and add flex center mixin

--- a/src/components/Form/FormContainer/form-container.scss
+++ b/src/components/Form/FormContainer/form-container.scss
@@ -9,7 +9,7 @@
     padding: 42px 32px;
     margin-top: 69px;
     text-align: left;
-    color: $color-grey-7;
+    color: $color-fiord;
     font-weight: 400;
 
     &__legend {
