--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -2,7 +2,7 @@ $color-black: #000;
 $color-white: #fff;
 
 $color-blue-dark: #001836;
-$color-grey-7: #3e5067;
+$color-fiord: #3e5067;
 $color-grey-6: #6a7889;
 $color-grey-5: #94a3ad;
 $color-grey-4: #cacfd5;
@@ -11,7 +11,7 @@ $color-grey-2: #edeff1;
 $color-grey-1: #f6f7f8;
 $color-red: #ff6e75;
 $color-grey-mischka: #9ea7b3;
-$color-grey-90: #e5e5e5;
+$color-mercury: #e5e5e5;
 
 $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
