task/SOUR-47-input-button-css change css according to new rules

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -10,7 +10,8 @@ $color-grey-3: #dcdfe3;
 $color-grey-2: #edeff1;
 $color-grey-1: #f6f7f8;
 $color-red: #ff6e75;
-$color-grey-mischka: #9ea7b3;
+
+$color-grey-chateau: #9ea7b3;
 $color-grey-90: #e5e5e5;
 
 $color-purple-dark: #6e44ff;
