--- a/src/styles/base/_config.scss
+++ b/src/styles/base/_config.scss
@@ -1,6 +1,5 @@
 .input-label {
-    color: $color-grey-mischka;
-    font-family: $main-font;
+    color: $color-grey-chateau;
     font-size: $size-14;
     font-weight: 700;
     text-transform: uppercase;
