--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,7 +1,3 @@
-$btn-hover: #5836cc;
-$btn-active: #462ca3;
-$btntxt-disabled: #9ea7b3;
-
 @import '../../styles/base/base';
 
 .button {
@@ -9,7 +5,6 @@ $btntxt-disabled: #9ea7b3;
     border: 0;
     border-radius: 65px;
     color: $color-white;
-    font-size: $size-16;
     height: 40px;
     padding: 8px 24px;
     text-transform: uppercase;
@@ -19,16 +14,16 @@ $btntxt-disabled: #9ea7b3;
 
         &:hover,
         &:focus {
-            background-color: $btn-hover;
+            background-color: $color-hover-purple;
         }
 
         &:active {
-            background-color: $btn-active;
+            background-color: $color-active-purple;
         }
     }
 
     &--disabled {
         background-color: $color-grey-2;
-        color: $btntxt-disabled;
+        color: $color-grey-chateau;
     }
 }
