--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -17,4 +17,4 @@ $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
 $color-active-purple: #462ca3;
 
-$color-clock: #31465e;
+$color-pickled-bluewood: #31465e;
