--- a/src/components/Clock/clock.scss
+++ b/src/components/Clock/clock.scss
@@ -1,8 +1,7 @@
 @import '../../styles/base/base';
-$_color-clock: $color-pickled-bluewood;
 
 .clock-wrapper {
-    color: $_color-clock;
+    color: $color-pickled-bluewood;
     font-family: $main-font;
     font-size: $size-100;
     font-weight: bold;
