feat/SOUR-41-card-components create basic css for users rating

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -10,8 +10,10 @@ $color-grey-3: #dcdfe3;
 $color-grey-2: #edeff1;
 $color-grey-1: #f6f7f8;
 $color-red: #ff6e75;
+$color-yellow: #fadb5e;
 $color-grey-mischka: #9ea7b3;
 $color-grey-90: #e5e5e5;
+$color-blue-bluewood: #31465e;
 
 $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
