--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -11,3 +11,18 @@
         }
     }
 }
+
+@mixin ratingbox($background, $element, $width) {
+    align-items: center;
+    background-color: $background;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: $element;
+    cursor: pointer;
+    display: flex;
+    font-weight: 700;
+    height: 32px;
+    justify-content: space-between;
+    padding: 8px 12px;
+    width: $width;
+}
