--- a/src/components/Clock/clock.scss
+++ b/src/components/Clock/clock.scss
@@ -1,8 +1,9 @@
 @import '../../styles/base/base';
+$_size-100: 100px;
 
 .clock-wrapper {
     color: $color-pickled-bluewood;
     font-family: $main-font;
-    font-size: $size-100;
+    font-size: $_size-100;
     font-weight: bold;
 }
