--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -16,3 +16,5 @@ $color-grey-90: #e5e5e5;
 $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
 $color-active-purple: #462ca3;
+
+$color-post-reaction-text: #627485;
