SOUR-43-Change EatOutCardContainer to InfoCardContainer

--- a/src/components/EatOutCards/InfoCardContainer/info-card-container.scss
+++ b/src/components/EatOutCards/InfoCardContainer/info-card-container.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/base/base';
 
-.eat-out-card {
+.info-card {
     background-color: $color-white;
     border-radius: 8px;
 
