--- a/src/components/EatOutCards/EatOutIntroCard/eat-out-intro-card.scss
+++ b/src/components/EatOutCards/EatOutIntroCard/eat-out-intro-card.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/mixins/mixins';
 
-.intro-card {
+.eat-out-intro-card {
     @include flex-center;
     width: auto;
     padding: 53px 40px;
