SOUR-43-Add EatOutWrapper container, modify container max-width in info-card-container.scss

--- a/src/components/InfoCardContainer/info-card-container.scss
+++ b/src/components/InfoCardContainer/info-card-container.scss
@@ -1,6 +1,7 @@
 @import '../../styles/base/base';
 
 .info-card {
+    max-width: 395px;
     background-color: $color-white;
     border-radius: 8px;
 
