--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -18,5 +18,5 @@ $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
 $color-active-purple: #462ca3;
 
-$color-post-reaction-text: #627485;
+$color-pickled-bluewood: #31465e;
 $color-post-reaction-text: #627485;
