correct classes in BirthdayCard, generalised color, renamed scss file
Signed-off-by: Laurynas Stoma <laurynas.stoma@gmail.com>

--- a/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
+++ b/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
@@ -20,7 +20,7 @@
   &__comment-count {
     font-size: 13px;
     font-weight: 500;
-    color: $color-post-reaction-text;
+    color: $color-grey-8;
     margin: 0;
     padding-left: 5px;
   }
