--- a/src/components/NewsFeedCard/BirthdayFeed/birthday-card.scss
+++ b/src/components/NewsFeedCard/BirthdayFeed/birthday-card.scss
@@ -55,22 +55,22 @@
 
 .svg-circle {
 
-  &--left-1 {
+  &--position-1 {
     top: 15%;
     left: 7%;
   }
 
-  &--left-2 {
+  &--position-2 {
     top: 10%;
     left: 25%;
   }
 
-  &--right-1 {
+  &--position-3 {
     top: 20%;
     right: 35%;
   }
 
-  &--right-2 {
+  &--position-4 {
     top: 17%;
     right: 15%;
   }
@@ -78,22 +78,22 @@
 
 .svg-star {
 
-  &--left-1 {
+  &--position-1 {
     top: 25%;
     left: 17%;
   }
 
-  &--left-2 {
+  &--position-2 {
     top: 30%;
     left: 30%;
   }
 
-  &--right-1 {
+  &--position-3 {
     top: 12%;
     right: 30%;
   }
 
-  &--right-2 {
+  &--position-4 {
     top: 35%;
     right: 25%;
   }
