--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -2,6 +2,7 @@ $color-black: #000;
 $color-white: #fff;
 
 $color-blue-dark: #001836;
+$color-grey-8: #627485;
 $color-grey-7: #3e5067;
 $color-grey-6: #6a7889;
 $color-grey-5: #94a3ad;
