SOUR-43-Modify EatOutCards components

--- a/src/components/EatOutCards/EatOutIntroCard/eat-out-intro-card.scss
+++ b/src/components/EatOutCards/EatOutIntroCard/eat-out-intro-card.scss
@@ -9,6 +9,7 @@
     &__heading {
         font-weight: 900;
         text-align: center;
+        line-height: 32px;
         margin: 0;
         margin-bottom: 24px;
     }
