SOUR-11 create user greeting text, create greeting widget component, display greeting widget

--- a/src/components/mainLayout/layout.scss
+++ b/src/components/mainLayout/layout.scss
@@ -19,6 +19,8 @@
     .content__wrapper {
         background: $color-grey-1;
         grid-area: c;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 
     .footer__wrapper {
