--- a/src/components/WeatherWidget/weather-widget.scss
+++ b/src/components/WeatherWidget/weather-widget.scss
@@ -1,93 +1,19 @@
 @import '../../styles/base/colors';
-@import '../../styles/base/typography';
-
-$transperent-black-5: rgba(0, 0, 0, 0.5);
-$transperent-black-3: rgba(0, 0, 0, 0.3);
 
 .widget {
-    display: flex;
-    margin: 50px;
+    background: $color-white;
+    border-radius: 10px;
+    display: inline-flex;
+    height: 175px;
 
-    &__wrapper {
-        background: $color-white;
-        border-radius: 10px;
-        display: flex;
-        height: 175px;
-        width: 375px;
-    }
-
-    &__column--first {
+    &__content {
         display: flex;
         flex-direction: column;
         line-height: normal;
         margin: 9px 0 9px 17.5px;
-        //height: 100%;
-
-        .weekDay-location {
-            color: $transperent-black-5;
-            display: flex;
-            font-size: $size-12;
-            letter-spacing: 0.5px;
-            // .weekDay {
-            // }
-            .Divider {
-                margin: 0 5px;
-            }
-            // .location {
-            // }
-        }
-
-        .weather {
-            display: flex;
-            flex: 1 0 auto;
-            flex-direction: column;
-            justify-content: flex-end;
-        }
-
-        .degrees-type {
-            align-items: baseline;
-            display: flex;
-
-            .degrees {
-                font-size: $size-60;
-                font-weight: 300;
-            }
-
-            .type {
-                color: $transperent-black-5;
-                font-size: $size-20;
-                font-weight: 300;
-            }
-        }
-
-        .wind-precipitation {
-            border-top: 1px solid $transperent-black-3;
-            color: $transperent-black-5;
-            display: flex;
-            font-size: $size-12;
-            font-weight: 300;
-            width: 81%;
-
-            .item {
-                align-items: center;
-                display: flex;
-                flex-grow: 1;
-                margin: 8px 0 0;
-            }
-
-            .item--text {
-                margin: 0 0 0 5px;
-            }
-        }
     }
 
-    &__column--second {
-        position: relative;
-
-        .icon {
-            position: absolute;
-            top: -5px;
-            //left: 10px;
-        }
+    &__icon-place {
+        width: 116px;
     }
 }
