SOUR-43-Change component names

--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -1,6 +1,6 @@
 @import '../../styles/base/base';
 
-.info-card {
+.card-container {
     max-width: 395px;
     background-color: $color-white;
     border-radius: 8px;
