--- a/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
+++ b/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/base//base';
 
-.eat-out-wrapper {
+.best-restaurant-wrapper {
     background-color: $color-porcelain;
     display: grid;
     grid-template-rows: 100%;
