--- a/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
+++ b/src/components/RestaurantCards/RestaurantIntroCard/restaurant-intro-card.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/mixins/mixins';
 
-.eat-out-intro-card {
+.restaurant-intro-card {
     @include flex-center;
     width: auto;
     padding: 53px 40px;
