--- a/src/components/WeatherWidget/weather-widget.scss
+++ b/src/components/WeatherWidget/weather-widget.scss
@@ -5,12 +5,13 @@
     border-radius: 10px;
     display: inline-flex;
     height: 175px;
+    margin: 0 120px 50px 0;
 
     &__content {
         display: flex;
         flex-direction: column;
         line-height: normal;
-        margin: 9px 0 9px 17.5px;
+        margin: 9px 0 9px 17px;
     }
 
     &__icon-place {
