--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -4,6 +4,6 @@
         flex-direction: row-reverse;
         height: 100%;
         justify-content: space-between;
-        margin: 40px 150px 0 40px;
+        margin: 40px;
     }
 }
