--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -21,3 +21,5 @@ $color-active-purple: #462ca3;
 
 $color-pickled-bluewood: #31465e;
 $color-post-reaction-text: #627485;
+
+$transperent-black-5: #00000080;
