--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -1,9 +1,50 @@
 .restaurant-card {
     &__top {
-        background-image: url('');
-        background-repeat: no-repeat;
-        background-size: contain;
+        position: relative;
+    }
+    &__checkins-rating {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        z-index: 2;
+        width: calc(100% - 32px);
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    &__categories {
+        position: absolute;
+        bottom: 0;
+        z-index: 2;
+        width: calc(100% - 32px);
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    &__background {
         width: 100%;
-        height: 200px;
+        height: 180px;
+        background: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0) 0%,
+            #ffffff 100%
+        );
+        z-index: 1;
+        position: absolute;
+    }
+    &__image {
+        object-fit: cover;
+        width: 100%;
+        height: 180px;
+        border-radius: 8px 8px 0px 0px;
+    }
+    &__bottom {
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 16px;
+    }
+    &__name-like {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
