--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -20,6 +20,7 @@
     color: $element;
     cursor: pointer;
     display: flex;
+    font-size: $size-14;
     font-weight: 700;
     height: 32px;
     justify-content: space-between;
