--- a/src/components/Breadcrumbs/breadcrumbs.scss
+++ b/src/components/Breadcrumbs/breadcrumbs.scss
@@ -5,6 +5,13 @@
   font-family: $main-font;
   font-size: $size-12;
   font-weight: 500;
+  max-width: 100%;
+  height: 100px;
+  
+  &__list {
+    padding: 0;
+    margin-top: 35px;
+  }
 
   &__link {
     text-decoration: none;
