--- a/src/components/CheckIns/check-ins.scss
+++ b/src/components/CheckIns/check-ins.scss
@@ -1,5 +1,20 @@
 @import '../../styles/base/base';
-@import '../../styles/mixins/mixins';
+
+@mixin ratingbox($background, $element, $width) {
+    align-items: center;
+    background-color: $background;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: $element;
+    cursor: pointer;
+    display: flex;
+    font-size: $size-14;
+    font-weight: 700;
+    height: 32px;
+    justify-content: space-between;
+    padding: 8px 12px;
+    width: $width;
+}
 
 .users {
     @include ratingbox($color-blue-bluewood, $color-yellow, 53px);
