feat/SOUR-41-card-components try to fix conflict

--- a/src/components/CheckIns/check-ins.scss
+++ b/src/components/CheckIns/check-ins.scss
@@ -17,5 +17,5 @@
 }
 
 .users {
-    @include ratingbox($color-blue-bluewood, $color-yellow, 53px);
+    @include ratingbox($color-pickled-bluewood, $color-yellow, 53px);
 }
