Add like functionality to feed card Add comment section to feed card Add post comment to feed card

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -9,3 +9,8 @@
   font-family: $main-font;  //delete when implemented
 }
 
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
