--- a/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
+++ b/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
@@ -5,7 +5,7 @@
   &__reaction,
   &__comment {
     display: inline-block;
-    margin: 12px 15px 12px 0;
+    margin: 5px 15px 5px 0;
   }
 
   &__reaction-icon,
@@ -23,5 +23,19 @@
     color: $color-grey-8;
     margin: 0;
     padding-left: 5px;
+  }
+
+  &__button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+
+    &:focus {
+      outline-color: transparent;
+    }
+  }
+
+  .disabled {
+    cursor: default;
   }
 }
