--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -12,6 +12,7 @@ $color-grey-1: #f6f7f8;
 $color-red: #ff6e75;
 $color-grey-mischka: #9ea7b3;
 $color-mercury: #e5e5e5;
+$color-porcelain: #f6f7f8;
 
 $color-purple-dark: #6e44ff;
 $color-hover-purple: #5836cc;
