--- a/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
+++ b/src/components/RestaurantCards/BestRestaurantWrapper/best-restaurant-wrapper.scss
@@ -7,6 +7,8 @@
     grid-template-columns: auto auto auto;
     grid-column-gap: 40px;
     justify-content: center;
+    padding-top: 64px;
+    padding-bottom: 64px;
 
     @media (max-width: 1100px) {
         grid-template-rows: auto auto auto;
