SOUR-43-Modify dashboard .jsx and .scss files according to old deleted files

--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -5,4 +5,9 @@
         justify-content: space-between;
         margin: 40px 0;
     }
+    &__heading {
+        font-weight: 900;
+        line-height: 32px;
+        margin: 0;
+    }
 }
