SOUR-43-Fix lint problems

--- a/src/components/Divider/divider.scss
+++ b/src/components/Divider/divider.scss
@@ -1,10 +1,10 @@
 @import '../../styles/base/base';
 
-$color-divider: #D3DCE6;
+$color-divider: #d3dce6;
 
 .divider {
-  height: 1px;
-  width: 100%;
-  background-color: $color-divider;
-  margin: 0 auto;
+    height: 1px;
+    width: 100%;
+    background-color: $color-divider;
+    margin: 0 auto;
 }
