--- a/src/styles/base/_config.scss
+++ b/src/styles/base/_config.scss
@@ -1,5 +1,5 @@
 .input-label {
-    color: $color-grey-mischka;
+    color: $color-grey-chateau;
     font-family: $main-font;
     font-size: $size-14;
     font-weight: 700;
