1. Add extra data to db.json for more results 2. Create Comment functionality 3. Modify the reactions and comments to respond to actions

--- a/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
+++ b/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
@@ -129,7 +129,7 @@ $transparent: transparent;
 
     &__text {
         color: $color-grey-1;
-        font-weight: 500;
+        font-weight: $weight-medium;
         padding-left: 20px;
         vertical-align: middle;
     }
