--- a/src/components/NewsFeedCard/BirthdayFeed/birthday-card-section.scss
+++ b/src/components/NewsFeedCard/BirthdayFeed/birthday-card-section.scss
@@ -23,11 +23,11 @@
 
   &__user {
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: $weight-medium;
   }
 
   &__wish {
-    font-weight: 500;
+    font-weight: $weight-medium;
   }
 
   &__svg {
@@ -49,7 +49,7 @@
   }
 
   .date {
-    font-weight: 500;
+    font-weight: $weight-medium;
   }
 
   p {
