--- a/src/components/NewsFeedCard/Comments/comments.scss
+++ b/src/components/NewsFeedCard/Comments/comments.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base/base';
+@import '../../../styles/base/base';
 
 .comment-section {
   color: $color-grey-7;
@@ -15,7 +15,7 @@
   }
 
   &__user-name {
-    font-weight: 500;
+    font-weight: $weight-medium;
     float: left;
     text-transform: uppercase;
     padding-right: 10px;
