--- a/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
+++ b/src/components/NewsFeedCard/UsersReactions/users-reactions.scss
@@ -1,41 +1,31 @@
 @import '../../../styles/base/base';
 
-.user-reactions {
-
-  &__reaction,
-  &__comment {
-    display: inline-block;
-    margin: 5px 15px 5px 0;
-  }
-
-  &__reaction-icon,
-  &__comment-icon,
-  &__reaction-count,
-  &__comment-count {
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  &__reaction-count,
-  &__comment-count {
-    font-size: 13px;
-    font-weight: 500;
-    color: $color-grey-8;
-    margin: 0;
-    padding-left: 5px;
-  }
-
-  &__button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
-
-    &:focus {
-      outline-color: transparent;
+ .user-reactions {
+     &__reaction, &__comment {
+         display: inline-block;
+         margin: 5px 15px 5px 0;
     }
-  }
-
-  .disabled {
-    cursor: default;
-  }
+     &__reaction-icon, &__comment-icon, &__reaction-count, &__comment-count {
+         display: inline-block;
+         vertical-align: middle;
+    }
+     &__reaction-count, &__comment-count {
+         font-size: 13px;
+         font-weight: $weight-medium;
+         color: $color-grey-8;
+         margin: 0;
+         padding-left: 5px;
+    }
+     &__button {
+         background: transparent;
+         padding: 0;
+         border: none;
+         cursor: pointer;
+         &:focus {
+             outline-color: transparent;
+        }
+    }
+     .disabled {
+         cursor: default;
+    }
 }
