--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 $main-font: 'Roboto', sans-serif;
+
 $size-14: 14px;
 $size-12: 12px;
 $size-10: 10px;
 $size-36: 36px;
+
+$weight-medium: 500;
