SOUR-17 Create initial card component w/ basic styling, add icons, add reservations section into main layout

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -24,3 +24,4 @@ $color-pickled-bluewood: #31465e;
 $color-post-reaction-text: #627485;
 
 $transperent-black-5: #00000080;
+$color-alabaster: #fafafa;
