--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -1,8 +1,30 @@
+@import '../../styles/base/base';
+
 .dashboard {
     &__header {
         display: flex;
         height: 100%;
         justify-content: space-between;
         margin: 40px 0;
+    }
+
+    &__section-title {
+        color: $color-pickled-bluewood;
+        font-size: $size-24;
+        font-weight: 900;
+    }
+
+    &__reservations-wrapper {
+        display: flex;
+        flex-direction: column;
+        margin-top: 70px;
+    }
+
+    &__reservations-cards {
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 25px;
     }
 }
