--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 $main-font: 'Roboto', sans-serif;
+$size-24: 24px;
 $size-20: 20px;
 $size-16: 16px;
 $size-14: 14px;
