feat/SOUR-41-card-components create categories, title, hours, heart button

--- a/src/components/RestaurantInfo/RestCategories/rest-categories.scss
+++ b/src/components/RestaurantInfo/RestCategories/rest-categories.scss
@@ -3,12 +3,13 @@
 .categories {
     align-items: center;
     display: flex;
+    padding: 4px 0;
     width: 50%;
 
     &__name {
         color: $color-grey-6;
-        font-family: $main-font;
         font-size: $size-10;
+        font-weight: 500;
         text-transform: uppercase;
     }
 
