--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -11,6 +11,7 @@
         width: calc(100% - 32px);
         padding-left: 16px;
         padding-right: 16px;
+        padding-top: 16px;
     }
     &__categories {
         position: absolute;
